document structural displacement nodes and related stuff; minor cleanup

--- a/mbdyn/manual/input/beam.tex
+++ b/mbdyn/manual/input/beam.tex
@@ -1488,7 +1488,7 @@ abstract nodes that represent the electrodes.
 
 \paragraph{Private Data}
 \label{sec:EL:BEAM:PRIVATE}
-The following data is available:
+The following data are available:
 \begin{enumerate}
 \item \kw{"ex"} axial strain
 \item \kw{"ey"} shear strain (local axis 2)
