--- a/mbdyn/manual/input/drivers.tex
+++ b/mbdyn/manual/input/drivers.tex
@@ -345,7 +345,7 @@ every \nt{steps} time steps;
 
 \item the keyword \kw{receive first} allows to enable/disable
 receiving data at the initial time (defaults to \kw{yes},
-thus data is expected at the initial time, during derivatives);
+thus data are expected at the initial time, during derivatives);
 
 \item the keyword \kw{timeout} allows to set a timeout
 for each read operation; the timeout is expressed in seconds
