--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -223,7 +223,7 @@ and NACA 0009 is used in the remaining rightmost 1/4, the syntax is:
 The \kw{interpolated} mode of the \kw{c81} data allows to specify 
 a smooth transition between different airfoils inside an element.
 The interpolation occurs at the integration points where the
-aerodynamic data is required, and it is performed once for all
+aerodynamic data are required, and it is performed once for all
 at the beginning of the analysis.
 Since this operation is time consuming, and essentially unnecessary,
 the interpolated data can be generated once for all with the utility
@@ -734,7 +734,7 @@ with respect to the inertial reference frame
 
 
 \paragraph{Private Data}
-The following data is available:
+The following data are available:
 \begin{itemize}
 \item \kw{"vxinf"} the $x$ component of the airstream speed (without any gust contribution)
 \item \kw{"vyinf"} the $y$ component of the airstream speed (without any gust contribution)
@@ -1200,7 +1200,7 @@ whose $y$ axis is the lateral (portside) axis,
 and whose $z$ axis is the vertical (bottom to top) axis.
 
 \paragraph{Private Data}
-The following data is available:
+The following data are available:
 \begin{enumerate}
 \item \kw{"Tx"} rotor force in $x$ direction (longitudinal force)
 \item \kw{"Ty"} rotor force in $y$ direction (lateral force)
