--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -64,7 +64,7 @@ The \kw{aerodynamic body}.
 %\end{verbatim}
 The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
 is expressed in the reference frame of the node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{aero2}
 The two-node \kw{aerodynamic beam}.
@@ -79,7 +79,7 @@ The two-node \kw{aerodynamic beam}.
 %\end{verbatim}
 The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
 is expressed in the reference frame of the respective nodes.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{aero3}
 The three-node \kw{aerodynamic beam}.
@@ -96,7 +96,7 @@ The three-node \kw{aerodynamic beam}.
 %\end{verbatim}
 The points are expressed as 3D vectors (\ty{Vec3}), whose origin and orientation
 is expressed in the reference frame of the respective nodes.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{axial rotation}
 The \kw{axialrotation} joint
@@ -111,7 +111,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{beam2}
 The two-node \kw{beam}.
@@ -123,7 +123,7 @@ The two-node \kw{beam}.
 \end{Verbatim}
 %\end{verbatim}
 The beam \kw{label} is followed by the label and the offset of each node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{beam3}
 The three-node \kw{beam}.
@@ -136,7 +136,7 @@ The three-node \kw{beam}.
 \end{Verbatim}
 %\end{verbatim}
 The beam \kw{label} is followed by the label and the offset of each node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{brake}
 The \kw{brake} joint
@@ -151,7 +151,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{clamp}
 The \kw{clamp} joint
@@ -167,7 +167,7 @@ are repeated twice.
 Moreover, the \nt{position} is always a vector of zeros,
 and the \nt{orientation} is the identity matrix.
 Basically, the location of the clamp is assumed to be that of the node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{deformable joints}
 The \kw{deformable hinge}, the \kw{deformable displacement joint}
@@ -187,7 +187,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{distance}
 The \kw{distance} joint
@@ -201,7 +201,7 @@ The \kw{distance} joint
 The \nt{label} of the joint, followed by the label of each node
 and the offset of the respective joint extremity,
 in the reference frame of the node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 Both \kw{distance} and \kw{distance with offset} joints are logged
 in this form.
 
@@ -218,7 +218,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{inline}
 The \kw{inline} joint
@@ -235,7 +235,7 @@ on the line and the orientation \nt{orientation\_1} of the line,
 such that axis 3 is aligned with the line.
 The second node label and the position of the point on the plane
 follow; \nt{orientation\_2} is the identity matrix.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{inplane}
 The \kw{inplane} joint
@@ -252,7 +252,7 @@ on the plane and the orientation \nt{orientation\_1} of the plane,
 such that axis 3 is normal to the plane.
 The second node label and the position of the point on the plane
 follow; \nt{orientation\_2} is the identity matrix.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{prismatic}
 The \kw{prismatic} joint
@@ -266,7 +266,7 @@ The \kw{prismatic} joint
 The \nt{position\_*} vectors are zero,
 while the \nt{orientation\_*} matrices indicate the orientation 
 of the joint in the reference frame of the respective nodes.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{relative frame structural node}
 The \kw{relative frame} variant of \kw{dummy} structural nodes
@@ -293,7 +293,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{revolute rotation}
 The \kw{revolute rotation} joint
@@ -308,7 +308,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{rod}
 The \kw{rod} joint
@@ -322,7 +322,7 @@ The \kw{rod} joint
 The \nt{label} of the joint, followed by the label of each node
 and the offset of the respective joint extremity,
 in the reference frame of the node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 Both \kw{rod} and \kw{rod with offset} joints are logged
 in this form.
 
@@ -339,7 +339,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{spherical pin}
 The \kw{spherical pin} joint
@@ -354,7 +354,7 @@ The format is quite obscure; the \nt{position} and the \nt{orientation}
 are repeated twice.
 The vector \nt{position} indicates the location of the joint,
 while the matrix \nt{orientation} is the identity matrix.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{structural forces}
 The structural forces elements
@@ -402,7 +402,7 @@ The \nt{position\_*} vectors indicates the location of the joint
 in the reference frame of the respective node,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{universal pin}
 The \kw{universal pin} joint
@@ -419,7 +419,7 @@ while the \nt{relative\_position} vector
 and the \nt{relative\_orientation} matrix indicate
 the location and the orientation of the joint
 in the reference frame of the node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 \subsection{universal rotation}
 The \kw{universal rotation} joint
@@ -433,7 +433,7 @@ The \kw{universal rotation} joint
 The \nt{position\_*} vectors are zero,
 while the \nt{orientation\_*} matrices indicate the orientation of the joint
 in the reference frame of the respective node.
-All data is in on one line, without continuation.
+All data are on one line, without continuation.
 
 
 \section{Analysis Description Entries}
