--- a/mbdyn/manual/input/netcdfout.tex
+++ b/mbdyn/manual/input/netcdfout.tex
@@ -116,7 +116,7 @@ that are present in the model.
 Each node type consists in a variable that contains an array
 with the labels (integers) of the nodes defined for that type.
 A variable named \kw{node.}\texttt{\bnt{type}.\bnt{label}} may be present
-(it is, for example, for \kw{structural nodes}); however, useful data is usually
+(it is, for example, for \kw{structural nodes}); however, useful data are usually
 contained in specific variables, whose names describe the contents.
 
 Currently supported node types are:
@@ -195,7 +195,7 @@ that are present in the model.
 Each element type consists in a variable that contains an array
 with the labels (integers) of the elements defined for that type.
 A variable named \kw{elem.}\texttt{\bnt{type}.\bnt{label}} may be present; however,
-useful data is usually contained in specific variables,
+useful data are usually contained in specific variables,
 whose names describe the contents.
 
 Currently supported element types are:
