--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -29,7 +29,7 @@
 \chapter{Problems}\label{sec:PROBLEMS}
 This section is used to insert all the data related to the problem that
 one needs MBDyn to solve in the simulation.
-The section data is included between the cards:
+The section data are included between the cards:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \kw{begin} : \bnt{problem_name} ;
@@ -646,7 +646,7 @@ only the eigenvectors corresponding to the selected eigenvalues are output;
 and orientation of the structural nodes, if any (excluding any dummy node);
 the vector contains, for each node, the three components
 of the reference position and the three components of the Euler vector
-corresponding to the reference orientation; all data is referred
+corresponding to the reference orientation; all data are referred
 to the absolute reference frame;
 
 \item \texttt{idx}: a vector containing the reference row index
