--- a/mbdyn/manual/input/elemplate.tex
+++ b/mbdyn/manual/input/elemplate.tex
@@ -123,3 +123,67 @@ The optional parameters \kw{as} and \kw{at} are not documented yet;
 the default should be used.
 
 \textbf{TODO: improve}
+
+
+
+\subsection{Membrane4}
+\label{sec:EL:PLATE:MEMBRANE4}
+
+\emph{Authors: Marco Morandini and Tommaso Solcia}
+
+The membrane4 element models a four-node membrane.
+The syntax is
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{elem_type} ::= \kw{membrane4eas} 
+
+    \bnt{normal_arglist} ::=
+        \bnt{node_1_label} , \bnt{node_2_label} , \bnt{node_3_label} , \bnt{node_4_label} ,
+        \bnt{membrane_constitutive_law_data}
+
+    \bnt{membrane_constitutive_law_data} ::=
+        \{ [ \kw{matr} , ] \bnt{3x3_matrix}
+            | \kw{sym} , \bnt{upper_triangular_3x3_matrix}
+            | \kw{diag} , \bnt{diagonal_3x3_matrix}
+            | \kw{isotropic} , \bnt{isotropic_data} \}
+        [ , \kw{prestress} , (\ty{Vec3}) \bnt{prestress} ]
+
+    \bnt{isotropic_data} ::=
+        \{ \{ \kw{E} | \kw{Young modulus} \} , \bnt{E}
+            | \{ \kw{nu} | \kw{Poisson modulus} \} , \bnt{nu}
+            | \{ \kw{G} | \kw{shear modulus} \} , \bnt{G}
+            | \kw{thickness} , \bnt{thickness} \}
+        [ , ... ]
+\end{Verbatim}
+%\end{verbatim}
+The name \kw{membrane4eas} stands for ``Enhanced Assumed Strain'' (EAS).
+Nodes are numbered according to Figure~\ref{fig:EL:PLATE:SHELL4:sketch}.
+Only linear elastic constitutive properties can be currently modeled.
+They consist in a $3 \times 3$ matrix that expresses the force
+fluxes as functions of linear strains according to
+\begin{align}
+	\cubr{\cvvect{
+		n_{11} \\
+		n_{22} \\
+		n_{12}
+	}}
+	&=
+	\sqbr{D}
+	\cubr{\cvvect{
+		\varepsilon_{11} \\
+		\varepsilon_{22} \\
+		\varepsilon_{12}
+	}}
+\end{align}
+When the \kw{isotropic} keyword is used, only two of the optional
+sub-keywords \kw{E}, \kw{nu} and \kw{G} are required, as the remaining
+parameter can be computed from the other two according to the relationship
+\begin{align}
+	\nt{G}
+	&=
+	\frac{\nt{E}}{2\plbr{1 + \nt{nu}}}
+	.
+\end{align}
+If all are provided, they must be consistent.
+
+
