--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -12,6 +12,12 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+	Bug fixes:
+
+MBDyn 1.5.0
+	Enhancements:
 		- added displacement-only nodes and selected basic elements
 		- added membrane element (Marco Morandini & Tommaso Solcia)
 		- added continuous contact constitutive law (Matteo Fancello)
@@ -24,11 +30,14 @@ MBDyn 1.X-Devel
 		- added "m" (mass) to body private data (Louis Gagnon)
 		- added module-eu2phi TplDriveCaller wrapper
 		  (suggested by Tingnan Zhang)
+		- added built-in 'TRUE' and 'FALSE' boolean const vars
+		- added built-in int/real limit const vars
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
 		- TotalPinJoint inverse dynamics support is broken
 		- RTAI and multithread support incompatible
+		- module-octave and multithread support incompatible
 	Bug fixes:
 		- fix output file name ext. issue (noted by Jens van Schelve)
 		- fix totalj rel. rot. priv data (noted by Jens van Schelve)
@@ -39,6 +48,7 @@ MBDyn 1.X-Devel
 		- fix initial assembly matrix reset (noted by Reinhard Resch)
 		- fix uninitialized array in modal joint parsing
 		  (noted by Domenico Capobianco)
+		- fix 'print: all'
 
 MBDyn 1.4.3
 	Enhancements:
