document 'in' function

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -277,6 +277,10 @@ can be reassigned.
 		\kw{sramp}	& Real		& Real, Real	& Saturated ramp function \\
 		\kw{par}	& Real		& Real		& Parabolic function \\
 		\kw{print}	& Void		& Real		& Prints a value to standard output \\
+		\kw{in\_ll}	& Bool		& Real, Real, Real & True when arg1 $<$ arg2 $<$ arg3, false otherwise \\
+		\kw{in\_le}	& Bool		& Real, Real, Real & True when arg1 $<$ arg2 $\le$ arg3, false otherwise \\
+		\kw{in\_el}	& Bool		& Real, Real, Real & True when arg1 $\le$ arg2 $<$ arg3, false otherwise \\
+		\kw{in\_ee}	& Bool		& Real, Real, Real & True when arg1 $\le$ arg2 $\le$ arg3, false otherwise \\
 		\hline
 	\end{tabular}
 	\end{center}
