--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -51,7 +51,7 @@ MBDyn 1.5.0
 		- fix uninitialized array in modal joint parsing
 		  (noted by Domenico Capobianco)
 		- fix 'print: all'
-		- fix link of NetCDF 4.X (noted by Patrick Rix)
+		- fix linking of NetCDF 4.X (noted by Patrick Rix)
 
 MBDyn 1.4.3
 	Enhancements:
